// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute reserve endpoint should return ripcord 1`] = `
{
  "data": {
    "result": "499",
    "ripcord": true,
  },
  "result": "499",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute reserve endpoint should return success 1`] = `
{
  "data": {
    "result": "800",
    "ripcord": false,
  },
  "result": "800",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;
